# access-request-service

./: .description.md  .design.md  .pre-commit-config.yaml  Dockerfile  Dockerfile.debian  Dockerfile.dhi  README.md  config_schema.json  example_config.yaml  openapi.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.devcontainer/: .dev_config.yaml  dev_launcher  devcontainer.json  docker-compose.yml
.github/workflows/: cd.yaml  unit_and_int_tests.yaml
.pyproject_generation/: pyproject_custom.toml
.readme_generation/: description.md
ars/: __init__.py  cli.py  config.py  container.py  main.py
ars/adapters/inbound/fastapi_/: auth.py  routes.py
ars/adapters/inbound/http/: auth.py  openapi.py  routes.py
ars/adapters/outbound/: __init__,py  dao.py  event_pub.py  http.py
ars/core/: models.py  repository.py
ars/ports/inbound/: repository.py
ars/ports/outbound/: access_grants.py  dao.py  notification_emitter.py
lock/: requirements-dev.in  requirements-dev.txt  requirements.txt
scripts/script_utils/: fastapi_app_location.py
src/ars/: __init__.py  __main__.py  cli.py  config.py  container.py  inject.py  main.py  prepare.py
src/ars/adapters/inbound/: __init__.py  event_sub.py
src/ars/adapters/inbound/fastapi_/: auth.py  configure.py  dummies.py  openapi.py  routes.py
src/ars/adapters/outbound/: __init__.py  dao.py  daos.py  event_pub.py  http.py
src/ars/core/: models.py  notifications.py  repository.py  roles.py
src/ars/migrations/: definitions.py  entry.py
src/ars/ports/inbound/: repository.py
src/ars/ports/outbound/: access_grants.py  dao.py  daos.py  event_pub.py
tests/: conftest.py  test_access_grants.py  test_api.py  test_event_pub.py  test_event_sub.py  test_migrations.py  test_outbox_pub.py  test_repository.py
tests/fixtures/: __init__.py  auth_keys.py  datasets.py
tests/migrations/: __init__.py  test_v2.py  test_v3.py
